--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "esModuleInterop": true,
     "target": "es2022",
-    "esModuleInterop": true
   }
 }
