--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write index.ts tests"
   },
   "hooks": {
-    "pre-commit": "npm run format && npm run test"
+    "pre-commit": "npm run format && npm run build && npm run test"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
