--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "node --test",
-    "format": "prettier --write index.ts tests"
+    "format": "prettier --write index.ts tests",
+    "ppp": "npm version patch && git push && npm publish"
   },
   "hooks": {
     "pre-commit": "npm run format && npm run build && npm run test"
