Update to new repo and simplify initial package release.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scn",
-  "version": "0.0.2",
+  "name": "mcn",
+  "version": "0.0.1",
   "main": "index.js",
   "type": "module",
   "prettier": {
